--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Simple Responsive Design Using HTML - CSS - Bootstrap">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bondi</title>
     <link rel="stylesheet" href="css/all.min.css">
